--- a/agua-luz-atracao/pom.xml
+++ b/agua-luz-atracao/pom.xml
@@ -4,4 +4,9 @@
   <artifactId>agua-luz-atracao</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <name>Sistema para Atracao de Contratos </name>
+  
+  <properties>
+   <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+  </properties>
+  
 </project>
