--- a/agua-luz-notification/pom.xml
+++ b/agua-luz-notification/pom.xml
@@ -3,7 +3,7 @@
   <groupId>com.mjv</groupId>
   <artifactId>agua-luz-case1</artifactId>
   <version>1.0</version>
-  <name>Projeto Agua Luz Notification MJV</name>
+  <name>Projeto Agua Luz Case1 MJV</name>
   
    <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
