--- a/agua-luz-atracao/.project
+++ b/agua-luz-atracao/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>agua-luz-atracao</name>
+	<name>agua-luz-atracao-notificacao</name>
 	<comment></comment>
 	<projects>
 	</projects>
