--- a/agua-luz-atracao/pom.xml
+++ b/agua-luz-atracao/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.mjv</groupId>
-  <artifactId>agua-luz-atracao</artifactId>
+  <artifactId>agua-luz-atracao-notificacao</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <name>Sistema para Atracao de Contratos </name>
   
