--- a/java-explorer/pom.xml
+++ b/java-explorer/pom.xml
@@ -1,7 +1,19 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>rodrigo</groupId>
-  <artifactId>java-explorer</artifactId>
-  <version>1.0</version>
-  <name>Projeto para Explorar a Linguagem Java</name>
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>rodrigo</groupId>
+	<artifactId>java-explorer</artifactId>
+	<version>1.0</version>
+	<name>Projeto para Explorar a Linguagem Java</name>
+
+	<dependencies>
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-engine</artifactId>
+			<version>5.8.1</version>
+			<scope>test</scope>
+		</dependency>
+
+	</dependencies>
+
+
 </project>
